tests/NormalTests/paczka1/fuzzy1/72632222.err
Error in line 15: aA2EsPye S218 73,5
Error in line 24: S218 S218 51,0
Error in line 29: aA2EsPye S218 44,7
Error in line 31: aA2EsPye A863 17,1
